1-system/5-minio/minio.virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio-virtual-service
spec:
  gateways:
    - istio-system/ezaf-gateway
  hosts:
    - minio.ingress.pcai0201.fr2.hpecolo.net
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: minio-console.unique.svc.cluster.local
            port:
              number: 9001
